调整笔记