@@ -133,6 +133,75 @@ public class GCLogAnalysis {
 
    ![image-20201024121656847](doc_img/image-20201024121656847.png)
 
-  编码格式
+  编码格式改为utf-8后继续编译
+  
+- ![image-20201024142013604](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20201024142013604.png)
 
- 
+# 作业
+
+## week02_01
+
+- 1、使用GCLogAnalysis.java自己演练一遍串行/并行/CMS/G1的案例
+
+环境：WIN10、JDK8、 512M内存
+
+```
+-XX:+UseSerialGC 使用串行GC
+
+-Xms512m 初始堆大小
+-Xmx512m 最大堆大小
+-Xloggc:serialGC.demo.log 将GC日报保存名为serialGC.demo.log的文件
+-XX:+PrintGCDetails 打印GC明细
+-XX:+PrintGCDateStamps 打印GC时间戳
+
+```
+
+
+
+​	**串行GC**
+
+> `java -XX:+UseSerialGC -Xms512m -Xmx512m  -XX:+PrintGCDetails -XX:+PrintGCDateStamps GCLogAnalysis`
+
+![image-20201025221932428](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20201025221932428.png)
+
+```
+def new generation 年轻代
+	eden space 新生代
+	from space 存货区0
+	to   space 存货区1
+tenured generation 老年代
+Metaspace 元数据
+	class space
+```
+
+共生成对象次数：5834次，年轻代GC 8次,FullGC 3次，YongGC耗时12~46毫秒，FullGC耗时74~90毫秒，时间是递增的，每次Young区满了才回收
+
+**并行GC**
+
+>java -XX:+UseParallelGC -Xms512m -Xmx512m  -XX:+PrintGCDetails -XX:+PrintGCDateStamps GCLogAnalysis
+
+![image-20201025224627636](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20201025224627636.png)
+
+1秒钟共生成对象次数:5108，发生发生YoungGC 16次，FullGC 2次，YoungGC耗时6~42毫秒，FullGC耗时72~75毫秒
+
+**CMS GC**
+
+> java -XX:+UseConcMarkSweepGC -Xms512m -Xmx512m  -XX:+PrintGCDetails -XX:+PrintGCDateStamps GCLogAnalysis
+
+![image-20201026003027301](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20201026003027301.png)
+
+1秒钟共生成对象次数:7348，发生发生YoungGC 14次，FullGC(CMS GC) 3次，失败2次，YoungGC耗时6~42毫秒，FullGC耗时72~75毫秒
+
+
+
+- 2、使用压测工具(wrk或sb)，演练gateway-server-0.0.1-SNAPSHOT.jar示例
+- 3、(选座)如果自己本地有可以运行的项目，可以按照2的方式进行演练。
+
+根据上述自己对于1和2的演示，写一段对于不同GC的总结，提交到github
+
+## week02-02
+
+- 1、（可选）运行课上的例子，以及Netty的例子，分析相关现象。
+
+- 2、写一段代码，使用HttpClient或OkHttp访问 http://localhost:8801,代码提交到github
+
